sql/ha_partition.h
@@ -413,6 +413,16 @@ public:
 
   virtual void return_record_by_parent();
 
+  virtual bool vers_can_native(THD *thd)
+  {
+    // PARTITION BY SYSTEM_TIME is not supported for now
+    bool can= !thd->lex->part_info
+              || thd->lex->part_info->part_type != VERSIONING_PARTITION;
+    for (uint i= 0; i < m_tot_parts && can; i++)
+      can= can && m_file[i]->vers_can_native(thd);
+    return can;
+  }
+
   /*
     -------------------------------------------------------------------------
     MODULE create/delete handler object
