sql/handler.h
@@ -2062,8 +2062,6 @@ struct Table_scope_and_contents_source_st
                                 const Lex_table_name &table_name,
                                 const Lex_table_name &db);
 
-  bool vers_native(THD *thd) const;
-
   void init()
   {
     bzero(this, sizeof(*this));
@@ -3419,6 +3417,10 @@ public:
     return (pre_inited == INDEX ?
             ha_pre_index_end() :
             pre_inited == RND ? ha_pre_rnd_end() : 0 );
+  }
+  virtual bool vers_can_native(THD *thd)
+  {
+    return ht->flags & HTON_NATIVE_SYS_VERSIONING;
   }
 
   /**
